--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,12 +1,12 @@
 <div class="chat-header">
   <div class="left-header">
     <div class="header-title">
-       <%= @room.name %>
+      <%= @room.name%>
     </div>
   </div>
   <div class="right-header">
     <div class="header-button">
-      <a href="#">チャットを終了する</a>
+      <%= link_to "チャットを終了する", room_path(@room), method: :delete %>
     </div>
   </div>
 </div>
@@ -14,6 +14,8 @@
 <div class="messages">
   <%= render partial: 'message', collection: @messages %>
 </div>
+
+
 
 <%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
   <div class="form-input">
